--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -97,14 +97,14 @@ img {
   margin-bottom: var(--mb-3);
   text-align: center;
 }
-.section-subtitle {
+/* .section-subtitle {
   display: block;
   font-size: var(--small-font-size);
   color: var(--first-color);
   text-align: center;
   font-weight: var(--font-semi-bold);
   margin-bottom: 0.25rem;
-}
+} */
 /*===== LAYOUT =====*/
 .bd-grid {
   max-width: auto;
@@ -141,11 +141,16 @@ img {
   padding: 3rem;
   display: flex;
   align-items: center;
-  background-color: var(--first-color);
+  animation: gradient 2s infinite alternate linear;
+  background: hsl(224, 38%, 41%);
   transition: 0.5s;
 }
 .nav__logo {
-  color: var(--first-color-light);
+  position: fixed;
+  font-size: 2rem;
+  top: 10px;
+  right: 10px;
+  height: 100vh;
 }
 
 .nav__theme {
@@ -202,7 +207,7 @@ body.dark-theme {
   transition: 0.3s;
 }
 .nav__link:hover {
-  color: var(--first-color-light);
+  color: var(--first-color-lighten);
 }
 .nav__toggle {
   color: var(--first-color-light);
@@ -231,59 +236,63 @@ body.dark-theme {
   height: max-content;
   text-align: center;
 }
+
 .home__img {
   padding-top: 1.3rem;
   padding-left: 0.8rem;
-  width: 160px;
-  height: 160px;
-  background-color: var(--first-color);
+  width: 260px;
+  height: 250px;
+  animation: gradient 2s infinite alternate linear;
+  background: hsl(224, 38%, 41%);
   border-radius: 50%;
   overflow: hidden;
   margin-bottom: var(--mb-2);
-}
-
-.home__img:hover {
-  border-radius: 50%;
-  background: rgba(59, 173, 227, 1);
-  background: linear-gradient(
-    45deg,
-    rgba(59, 173, 227, 1) 0%,
-    rgba(87, 111, 230, 1) 25%,
-    rgba(152, 68, 183, 1) 51%,
-    rgba(255, 53, 127, 1) 100%
-  );
+  border: solid 3px hsl(224, 38%, 41%);
 }
 
 .home__img img {
-  width: 155px;
+  width: 100%;
 }
 .home__title {
   font-size: var(--h1-font-size);
   color: var(--first-color-darken);
-  font-weight: var(--font-semi-bold);
+  font-weight: var(--font-bold);
 }
 .home__profession {
   font-size: var(--small-font-size);
   color: var(--first-color-dark);
   margin-bottom: var(--mb-5);
 }
-.home__social {
-  margin-bottom: 2rem;
+
+.typewriter span {
+  font-family: monospace;
+  letter-spacing: 0.17em;
+  margin: 0 auto;
+  overflow: hidden;
+  white-space: nowrap;
+  border-right: 0.17em solid pink;
+  animation: typing 1.5s steps(19, end), blinking-cursor 0.5s step-end infinite;
 }
-.home__social-link {
-  display: inline-flex;
-  background-color: var(--first-color);
-  color: var(--first-color-lighten);
-  font-size: 1.5rem;
-  border-radius: 50%;
-  padding: 0.4rem;
-  margin: 0 var(--mb-1);
-  margin-top: var(--mb-5);
-  transition: 0.3s;
+
+@keyframes typing {
+  from {
+    width: 0;
+  }
+  to {
+    width: 20%;
+  }
 }
-.home__social-link:hover {
-  background-color: var(--first-color-light);
+
+@keyframes blinking-cursor {
+  from,
+  to {
+    border-color: transparent;
+  }
+  50% {
+    border-color: pink;
+  }
 }
+
 .home__button {
   width: 100%;
 }
@@ -301,16 +310,16 @@ body.dark-theme {
 
 .button:hover {
   background: rgba(59, 173, 227, 1);
-  background: linear-gradient(
-    45deg,
-    rgba(59, 173, 227, 1) 0%,
-    rgba(87, 111, 230, 1) 25%,
-    rgba(152, 68, 183, 1) 51%,
-    rgba(255, 53, 127, 1) 100%
-  );
+  animation: gradient 2s infinite alternate linear;
+  background: hsl(224, 38%, 41%);
 }
 
-.button__light {
+@keyframes gradient {
+  100% {
+    background: hsl(338, 38%, 41%);
+  }
+}
+s .button__light {
   background-color: var(--first-color);
   color: var(--first-color);
 }
@@ -319,11 +328,15 @@ body.dark-theme {
 }
 /* ===== ABOUT =====*/
 .about__container {
-  row-gap: 2rem;
+  row-gap: 10px;
 }
 .about__section {
-  background-color: hsl(250, 8%, 45%);
+  background: linear-gradient(132deg, #832e39, #591bc5, #212335);
+  background-size: 100% 100%;
+  animation: Gradient 5s ease infinite;
+  overflow: hidden;
   border-radius: 10px;
+  padding: 10px;
 }
 .about__bg {
   color: var(--first-color-darken);
@@ -333,7 +346,13 @@ body.dark-theme {
 }
 .about__description {
   margin-bottom: var(--mb-4);
-  text-align: center;
+  margin-top: var(--mb-4);
+  margin-left: 100px;
+  color: hsl(250, 70%, 96%);
+  text-align: justify;
+  font-size: var(--h3-font-size);
+  letter-spacing: 2px;
+  text-shadow: 1px 1px black;
 }
 .about__img {
   width: 150px;
@@ -341,31 +360,8 @@ body.dark-theme {
   margin: 0 auto;
 }
 
-.about__information {
+.about__img {
   margin-bottom: var(--mb-4);
-}
-.about__information-title {
-  font-size: var(--h3-font-size);
-  color: var(--first-color-darken);
-  margin-bottom: var(--mb-2);
-}
-.about__information-data {
-  display: flex;
-  align-items: center;
-  padding-left: 1.5rem;
-  margin-bottom: var(--mb-3);
-}
-.about__information-icon {
-  font-size: 1.5rem;
-  color: var(--first-color-lighten);
-  margin-right: var(--mb-4);
-}
-.about__information-subtitle {
-  display: block;
-  font-weight: var(--font-semi-bold);
-}
-.about__information-subtitle-small {
-  font-size: var(--small-font-size);
 }
 
 /* ===== SKILLS =====*/
@@ -433,27 +429,24 @@ body.dark-theme {
   width: 80%;
 }
 .skills__js {
-  width: 10%;
+  width: 30%;
 }
+
+.skills__reactjs {
+  width: 40%;
+}
+
 .skills__c {
-  width: 60%;
+  width: 50%;
 }
 .skills__python {
   width: 40%;
 }
 
 .skills__mysql {
-  width: 30%;
+  width: 10%;
 }
-.skills__vhdl {
-  width: 40%;
-}
-.skills__assembly {
-  width: 40%;
-}
-.skills__fpga {
-  width: 40%;
-}
+
 .skills__word {
   width: 70%;
 }
@@ -702,12 +695,15 @@ body.dark-theme {
     padding-left: 4rem;
   }
 
+  .about__container {
+    grid-template-columns: 2fr, 2fr;
+  }
+
   .skills__container,
-  .about__container,
   .works__container,
   .contact__container,
   .contact__inputs {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(2, 2fr);
   }
 
   .education__time {
@@ -731,5 +727,116 @@ body.dark-theme {
     color: var(--first-color-light);
     padding: 3rem 0;
     border-radius: 0.5rem;
+  }
+}
+
+/* ANIMATION HOME */
+.circles {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.circles li {
+  position: absolute;
+  z-index: -1;
+  display: block;
+  list-style: none;
+  width: 20px;
+  height: 20px;
+  background: var(--first-color);
+  animation: animate 25s linear infinite;
+  bottom: -150px;
+}
+
+.circles li:nth-child(1) {
+  left: 25%;
+  width: 80px;
+  height: 80px;
+  animation-delay: 0s;
+}
+
+.circles li:nth-child(2) {
+  left: 10%;
+  width: 20px;
+  height: 20px;
+  animation-delay: 2s;
+  animation-duration: 12s;
+}
+
+.circles li:nth-child(3) {
+  left: 70%;
+  width: 20px;
+  height: 20px;
+  animation-delay: 4s;
+}
+
+.circles li:nth-child(4) {
+  left: 40%;
+  width: 60px;
+  height: 60px;
+  animation-delay: 0s;
+  animation-duration: 18s;
+}
+
+.circles li:nth-child(5) {
+  left: 65%;
+  width: 20px;
+  height: 20px;
+  animation-delay: 0s;
+}
+
+.circles li:nth-child(6) {
+  left: 75%;
+  width: 110px;
+  height: 110px;
+  animation-delay: 3s;
+}
+
+.circles li:nth-child(7) {
+  left: 35%;
+  width: 150px;
+  height: 150px;
+  animation-delay: 7s;
+}
+
+.circles li:nth-child(8) {
+  left: 50%;
+  width: 25px;
+  height: 25px;
+  animation-delay: 15s;
+  animation-duration: 45s;
+}
+
+.circles li:nth-child(9) {
+  left: 20%;
+  width: 15px;
+  height: 15px;
+  animation-delay: 2s;
+  animation-duration: 35s;
+}
+
+.circles li:nth-child(10) {
+  left: 85%;
+  width: 150px;
+  height: 150px;
+  animation-delay: 0s;
+  animation-duration: 11s;
+}
+
+@keyframes animate {
+  0% {
+    transform: translateY(0) rotate(0deg);
+    opacity: 1;
+    border-radius: 0;
+  }
+
+  100% {
+    transform: translateY(-1000px) rotate(720deg);
+    opacity: 0;
+    border-radius: 50%;
   }
 }
